--- a/app/src/main/res/xml/pref_config_read.xml
+++ b/app/src/main/res/xml/pref_config_read.xml
@@ -103,8 +103,8 @@
 
     <io.legado.app.lib.prefs.SwitchPreference
         android:defaultValue="false"
-        android:key="volumeKeyPageOnLongPress"
-        android:title="@string/volume_key_page_on_long_press"
+        android:key="keyPageOnLongPress"
+        android:title="@string/key_page_on_long_press"
         app:iconSpaceReserved="false"
         app:isBottomBackground="true" />
 
