--- a/app/src/main/res/xml/about.xml
+++ b/app/src/main/res/xml/about.xml
@@ -40,8 +40,8 @@
             app:iconSpaceReserved="false" />
 
         <io.legado.app.lib.prefs.Preference
-            android:key="saveHeapDump"
-            android:title="@string/save_heap_dump"
+            android:key="createHeapDump"
+            android:title="@string/create_heap_dump"
             app:iconSpaceReserved="false" />
 
         <io.legado.app.lib.prefs.Preference
